tests/testcases/errors/BCE0108-1.boo
"""
BCE0108-1.boo(5,20): BCE0108: Value type fields cannot have initializers.
"""
class Foo(System.ValueType):
	public Value = 0
